impl/client/src/main/javascript/web/prompting/pentaho-prompting.css
div.prompt-panel {
  padding: 4px 0 0 8px;
  overflow: auto;
}

div.prompt-panel .pentaho-toggle-button-container {
  margin: 6px 0;
}

div.prompt-panel .pentaho-toggle-button-horizontal {
  display: inline;
  /* For IE 7 */
  zoom: 1;
}

div.prompt-panel .pentaho-toggle-button-vertical {
  padding: 2px 14px;
}

div.prompt-panel div.parameter-label {
  font-size: 10pt;
  font-weight: bold;
  white-space: nowrap;
}

div.prompt-panel div.parameter-wrapper {
  overflow: auto;

  /* [BISERVER-8807] - Fix IE9 bug with tables growing when css styles added dynamically
   * http://stackoverflow.com/questions/5788726/add-remove-css-will-cause-ie9-to-increase-the-tables-height
   */
  margin: auto 4px 4px 4px;
}

div.prompt-panel div.flow div.parameter {
  float: left;
}

div.prompt-panel div.parameter {
  margin: 0 10px 0 0;
}

div.prompt-panel div.parameter.error {
  border: 1px solid red;
}

div.submit-panel {
  padding: 10px 0 8px 8px;
}

div.submit-panel div.schedule-button-container {
  float: left;
  margin: 0 4px 0 0;
}

div.submit-panel label.auto-complete-checkbox {
  margin: 0 0 0 4px;
}

div.prompt-panel ol,ul {
  width: 100%;
  margin: 0;
  padding: 0;
  list-style: none;
}

/* General UI styling for Autocomplete Menu
----------------------------------*/
 .ui-widget-content .ui-state-hover { border: 1px solid #D0D0D0; background-color: #D0D0D0; font-weight: normal; color: black; }
.ui-widget :active { outline: none; }

/* Autocomplete
----------------------------------*/
.ui-autocomplete { position: absolute; cursor: default; 
  background-color: #ffffff;
  border: 1px solid black;
  width: 400px;
}
/*.ui-autocomplete-loading { background: white url('images/ui-anim_basic_16x16.gif') right center no-repeat; }*/

/* workarounds */
* html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */

/* Menu
----------------------------------*/
.ui-menu {
        cursor: pointer;
        list-style:none;
        padding: 2px;
        margin: 0;
        display:block;
}
.ui-menu .ui-menu {
        margin-top: -3px;
}
.ui-menu .ui-menu-item {
        margin:0;
        padding: 0;
        width: 100%;
}
.ui-menu .ui-menu-item a {
        text-decoration:none;
        display:block;
        padding:.2em .4em;
        line-height:1.5;
        zoom:1;
}
.ui-menu .ui-menu-item a.ui-state-hover,
.ui-menu .ui-menu-item a.ui-state-active {
        margin: -1px;
}

